# wraith-browser

./: .dockerignore  .gitignore  .mcp.json  .stignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  HANDOFF.md  INSTALL.md  LICENSE  NEXT-UP.md  README.md  test-indeed.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
.stfolder/: syncthing-folder-63ee0f.txt
benchmarks/: README.md  bench_concurrent.sh  bench_latency.sh  bench_memory.sh  bench_tokens.sh  bench_vs_playwright.js  package.json  test_urls.txt
benchmarks/results/: vs_playwright_2026-03-31T22-58-34.json  vs_playwright_2026-03-31T23-04-13.json  vs_playwright_2026-03-31T23-08-04.json
crates/agent-loop/: Cargo.toml
crates/agent-loop/src/: agent.rs  checkpoint.rs  error.rs  history.rs  lib.rs  llm.rs  mcts.rs  prefetch.rs  task.rs  task_dag.rs  timetravel.rs  webhooks.rs  workflow.rs
crates/api-server/src/: engine_bridge.rs
crates/api-server/src/routes/: admin.rs  auth.rs  billing.rs  cache.rs  entities.rs  health.rs  mod.rs  sessions.rs  sso.rs  swarm.rs  tasks.rs  teams.rs  usage.rs  vault.rs  workflows.rs  ws.rs
crates/browser-core/: Cargo.toml
crates/browser-core/src/: actions.rs  config.rs  dom.rs  engine.rs  engine_cdp.rs  engine_chrome.rs  engine_native.rs  engine_sevro.rs  error.rs  fingerprint_config.rs  lib.rs  native.rs  network_intel.rs  playbook.rs  rate_limit.rs  selectors.rs  session.rs  stealth.rs  stealth_evasions.rs  stealth_http.rs  swarm.rs  tab.rs  telemetry.rs  tls_fingerprint.rs  tor.rs  transport.rs  verify.rs  vision.rs  wasm_plugins.rs
crates/cache/: Cargo.toml
crates/cache/src/: compression.rs  dedup.rs  diffing.rs  embeddings.rs  entity_graph.rs  error.rs  fulltext.rs  lib.rs  query.rs  schema.rs  site_capability.rs  staleness.rs  stats.rs  store.rs
crates/cache/src/sql/: schema.sql
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/content-extract/: Cargo.toml
crates/content-extract/src/: error.rs  lib.rs  markdown.rs  ocr.rs  pdf.rs  readability.rs  strip.rs
crates/identity/: Cargo.toml
crates/identity/src/: auth.rs  credential.rs  error.rs  fingerprint.rs  human_loop.rs  lib.rs  profiles.rs  vault.rs
crates/identity/src/sql/: vault_schema.sql
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  server.rs  tools.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: lib.rs
crates/search-engine/: Cargo.toml
crates/search-engine/src/: error.rs  lib.rs  local.rs  scoring.rs  web.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  reqwest_impl.rs
docs/api/: mcp-tools-reference.md
docs/superpowers/plans/: 2026-03-23-foss-site-plan.md
docs/superpowers/specs/: 2026-03-23-foss-site-design.md
foss-site/: .gitignore  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
foss-site/app/: layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
foss-site/app/api/signup/: route.ts
foss-site/app/blog/: page.tsx
foss-site/app/blog/[slug]/: page.tsx
foss-site/app/community/: page.tsx
foss-site/app/docs/[[...slug]]/: page.tsx
foss-site/app/playground/: page.tsx  playground-hub.tsx
foss-site/app/signup/: page.tsx  signup-form.tsx
foss-site/app/vs/: page.tsx
foss-site/components/: mdx.tsx  playground-replay.tsx  roi-calculator.tsx
foss-site/content/blog/: browser-automation-without-chrome.mdx  building-browser-engine-rust.mdx  building-knowledge-graph-from-web-data.mdx  concurrent-browser-sessions-vps.mdx  introducing-openclaw.mdx  mcp-tools-vs-playwright.mdx
foss-site/content/docs/: index.mdx  meta.json
foss-site/content/docs/architecture/: benchmarks.mdx  engine-overview.mdx  mcp-protocol.mdx  snapshot-model.mdx
foss-site/content/docs/cli-reference/: commands.mdx  transport-modes.mdx
foss-site/content/docs/enterprise/: comparison.mdx  contact.mdx  features.mdx  licensing.mdx  meta.json  pricing.mdx  roi-calculator.mdx  security.mdx
foss-site/content/docs/getting-started/: downloads.mdx  first-session.mdx  hello-world-scrape.mdx  installation.mdx  meta.json
foss-site/content/docs/guides/: credential-vault.mdx  form-filling.mdx  knowledge-graph.mdx  web-scraping.mdx
foss-site/content/docs/knowledge-graph/: embeddings.mdx  entity-resolution.mdx  page-cache.mdx
foss-site/content/docs/mcp-tools/: advanced.mdx  automation.mdx  cache.mdx  cookies.mdx  dom.mdx  entities.mdx  extraction.mdx  identity.mdx  index.mdx  interaction.mdx  navigation.mdx  plugins.mdx  search.mdx  session.mdx  telemetry.mdx  time-travel.mdx
foss-site/content/docs/self-hosting/: configuration.mdx  docker.mdx
foss-site/content/playground/: fill-a-form.json  first-scrape.json  knowledge-graph.json  vault-and-login.json
foss-site/lib/: blog.ts  layout.shared.tsx  replay-parser.ts
marketing/: demo-script.md  hn-launch.md  recording-setup.md
scripts/: build-release.ps1  build-release.sh  indeed-login.md  release-targets.md  rotate-github-pat.md
sevro/: SERVO_UPSTREAM_COMMIT
sevro/ports/headless/: Cargo.toml
sevro/ports/headless/src/: dom_bridge.js  js_runtime.rs  lib.rs
sevro/ports/headless/tests/: real_sites.rs
