[package]
name = "wraith-agent-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI agent decision loop — observe, think, act cycle for autonomous browsing"

[dependencies]
wraith-browser-core = { path = "../browser-core" }
wraith-content-extract = { path = "../content-extract" }
wraith-search = { path = "../search-engine" }
wraith-cache = { path = "../cache" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
blake3.workspace = true
url.workspace = true
async-trait.workspace = true
regex.workspace = true
rusqlite.workspace = true
sha2.workspace = true
