[package]
name = "openclaw-browser-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core browser control — unified BrowserEngine trait with multiple backends"

[features]
default = ["chrome-legacy"]
chrome-legacy = ["dep:chromiumoxide", "dep:chromiumoxide_cdp"]
sevro = ["dep:sevro-headless"]
stealth-tls = ["dep:rquest"]

[dependencies]
chromiumoxide = { workspace = true, optional = true }
chromiumoxide_cdp = { workspace = true, optional = true }
sevro-headless = { path = "../../sevro/ports/headless", optional = true }
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
scraper.workspace = true
regex.workspace = true
rand.workspace = true
async-trait.workspace = true
rquest = { workspace = true, optional = true }
