[package]
name = "openclaw-browser-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core browser control — unified BrowserEngine trait with multiple backends"

[features]
default = ["sevro"]
sevro = ["dep:sevro-headless"]
stealth-tls = ["dep:rquest", "sevro-headless?/stealth-tls"]
vision-ml = ["dep:ort"]
tor = ["dep:arti-client", "dep:tor-rtcompat"]
wasm = ["dep:wasmtime"]

[dependencies]
sevro-headless = { path = "../../sevro/ports/headless", optional = true }
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
scraper.workspace = true
regex.workspace = true
rand.workspace = true
async-trait.workspace = true
rquest = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
arti-client = { workspace = true, optional = true }
tor-rtcompat = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
openclaw-scripting = { path = "../scripting" }
