[package]
name = "wraith-browser-core"
description = "Core browser control — unified BrowserEngine trait with multiple backends"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["sevro"]
sevro = ["dep:sevro-headless"]
cdp = ["dep:tokio-tungstenite"]
stealth-tls = ["dep:rquest", "dep:rquest-util", "sevro-headless?/stealth-tls"]
vision-ml = ["dep:ort"]
tor = ["dep:arti-client", "dep:tor-rtcompat"]
wasm = ["dep:wasmtime"]

[dependencies]
sevro-headless = { path = "../../sevro/ports/headless", optional = true }
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
scraper.workspace = true
regex.workspace = true
rand.workspace = true
async-trait.workspace = true
rquest = { workspace = true, optional = true }
rquest-util = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
arti-client = { workspace = true, optional = true }
tor-rtcompat = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
wraith-scripting = { path = "../scripting" }
wraith-transport = { path = "../transport", features = ["reqwest-backend"] }
tokio-tungstenite = { workspace = true, optional = true }
