[package]
name = "wraith-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent AI knowledge store — SQLite + Tantivy for cached pages, search results, DOM snapshots, and browsing history"

[dependencies]
rusqlite.workspace = true
tantivy.workspace = true
blake3.workspace = true
flate2.workspace = true
zstd.workspace = true
sha2.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
parking_lot.workspace = true
regex.workspace = true
petgraph.workspace = true

[dev-dependencies]
tempfile = "3"
