[package]
name = "openclaw-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenClaw Browser — an AI-agent-first web browser written in Rust"

[[bin]]
name = "openclaw-browser"
path = "src/main.rs"

[dependencies]
openclaw-browser-core = { path = "../browser-core" }
openclaw-content-extract = { path = "../content-extract" }
openclaw-identity = { path = "../identity" }
openclaw-search = { path = "../search-engine" }
openclaw-agent-loop = { path = "../agent-loop" }
openclaw-cache = { path = "../cache" }
openclaw-mcp-server = { path = "../mcp-server" }
secrecy = { workspace = true }
dirs.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
