[package]
name = "wraith-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wraith Browser — an AI-agent-first web browser written in Rust"

[[bin]]
name = "wraith-browser"
path = "src/main.rs"

[features]
default = ["sevro", "cdp"]
sevro = ["wraith-browser-core/sevro", "wraith-mcp-server/sevro"]
cdp = ["wraith-browser-core/cdp", "wraith-mcp-server/cdp"]

[dependencies]
wraith-browser-core = { path = "../browser-core", default-features = false }
wraith-content-extract = { path = "../content-extract" }
wraith-identity = { path = "../identity" }
wraith-search = { path = "../search-engine" }
wraith-agent-loop = { path = "../agent-loop" }
wraith-cache = { path = "../cache" }
wraith-mcp-server = { path = "../mcp-server" }
secrecy = { workspace = true }
dirs.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
