[package]
name = "openclaw-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing OpenClaw Browser tools to Claude Code and other LLM agents"

[dependencies]
openclaw-browser-core = { path = "../browser-core" }
openclaw-content-extract = { path = "../content-extract" }
openclaw-search = { path = "../search-engine" }
openclaw-agent-loop = { path = "../agent-loop" }
rmcp.workspace = true
schemars.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
clap.workspace = true
