[package]
name = "openclaw-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing OpenClaw Browser tools to Claude Code and other LLM agents"

[features]
default = ["sevro"]
sevro = ["openclaw-browser-core/sevro"]
cdp = ["openclaw-browser-core/cdp"]

[dependencies]
openclaw-browser-core = { path = "../browser-core", default-features = false }
base64.workspace = true
openclaw-content-extract = { path = "../content-extract" }
openclaw-identity = { path = "../identity" }
openclaw-cache = { path = "../cache" }
openclaw-search = { path = "../search-engine" }
openclaw-agent-loop = { path = "../agent-loop" }
secrecy = { workspace = true }
rmcp.workspace = true
schemars.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
clap.workspace = true
dirs.workspace = true
url.workspace = true
reqwest.workspace = true
chrono.workspace = true
rusqlite.workspace = true
scraper.workspace = true
aes-gcm.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
