[package]
name = "openclaw-scripting"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rhai scripting layer — userscripts for AI browsers, sandboxed extraction rules"

[dependencies]
rhai.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
