[package]
name = "openclaw-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integrated search: web metasearch (SearXNG-style) + local content indexing via Tantivy"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
tantivy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
scraper.workspace = true
regex.workspace = true
dirs.workspace = true
