[package]
name = "wraith-transport"
description = "HTTP transport trait — pluggable backend abstraction for wraith-browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
reqwest-backend = ["dep:reqwest"]

[dependencies]
async-trait.workspace = true
reqwest = { workspace = true, optional = true }
